# glam-cli

./: .gitignore  .readme-gen.json  LICENSE  README.md  SKILL.md  package.json  pyproject.toml
docs/: API.md  COOKIE-EXTRACTION.md  GAPS-REMEDIATION.md  GITHUB-SETUP.md  RELEASE.md  glam-cli-architecture.html
docs/plans/: 2026-03-25-chrome-safe-storage-cache.md  2026-03-31-browser-auth-roadmap-phase-1.md  2026-03-31-browser-auth-roadmap-phase-2.md  2026-03-31-browser-auth-roadmap-phase-3.md  2026-03-31-release-prep-v0.3.0.md
homebrew/: glam-cli.rb
scripts/: enrich_saved_video_manifest_with_ocr.py  extract-cookies.py  extract_saved_video_frames_manifest.py  install-python-package.mjs  ocr_selected_frames.py  prepare_saved_videos.py  sort_saved_videos.py  update-homebrew-from-pypi.py  update-homebrew-sha.sh
src/gram/: __init__.py  __main__.py  auth.py  browser_auth.py  cli.py  config.py  downloader.py  output.py  utils.py
tasks/: lessons.md  todo.md
tests/: test_auth_extractors.py  test_auth_manager.py  test_browser_auth.py  test_cli_exit_codes.py  test_cli_login.py  test_config_manager.py  test_downloader_highlights.py  test_downloader_resume.py  test_downloader_saved.py  test_prepare_saved_videos.py  test_utils.py
