[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glam-cli"
version = "0.2.0"
description = "Instagram CLI for downloading posts, stories, and profiles"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TWC Vault", email = "vault@twc.dev"}
]
keywords = ["instagram", "cli", "download", "social-media", "instaloader", "glam"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "instaloader>=4.10",
    "browser-cookie3>=0.19",
    "click>=8.0",
    "rich>=13.0",
    "requests>=2.28",
    "json5>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "build>=0.10",
    "twine>=4.0",
]

[project.scripts]
glam = "gram.cli:main"
gram = "gram.cli:main"

[project.urls]
Homepage = "https://github.com/Sheshiyer/glam-cli"
Documentation = "https://github.com/Sheshiyer/glam-cli#readme"
Repository = "https://github.com/Sheshiyer/glam-cli"
Issues = "https://github.com/Sheshiyer/glam-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gram"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/docs",
    "/scripts",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/gram"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
